--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -9,5 +9,7 @@
    <p>{{post.rating}} / 10</p>  
 </div> 
 
+<a href="{% url 'post_delete' post.pk %}">Delete This Post</a>
+
 
 {% endblock content %}
