--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
 {% for post in post_list %}
 <div class = "post-entry">
     <h2><a href="{% url 'post_detail' post.pk %}">{{post.title}}</a></h2>
+    <p>Author : {{post.author}}</p>
     <p>Band : {{post.band_name}}</p> </br>
     <p><p>Album : {{post.album_name}}</p> </br></p>
     <p>{{post.body}}</p> </br>
