some parts of user profiles implemented

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,12 @@
 {% for post in post_list %}
 <div class = "post-entry">
     
-    <h2><a href="{% url 'post_detail' post.pk %}">{{post.title}}</a></h2>
+    <h2>{{post.title}}</h2>
     <p>Author : {{post.author}}</p>
     <p>Band : {{post.band_name}}</p> </br>
     <p><p>Album : {{post.album_name}}</p> </br></p>
-    <p>{{post.body}}</p> </br>
-    {{post.rating}}
     
+    <h2><a href="{% url 'post_detail' post.pk %}">Read the post</a></h2>
 </div>
 
 {% endfor %}
