--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,10 @@
         {% if user.is_authenticated %}
         <div class="topnav">
             <p>Logged in as {{user.username}}</p>
-            <a href="{% url 'logout' %}">Log out</a>
-            <a href="{% url 'post_new' %}">Create A Post</a>
+            <a href="{% url 'logout' %}">Log out</a> </div> </body> </br>
+            <a href="{% url 'post_new' %}">Create A Post</a> </br>
+            <a href="{% url 'profile_page' user.profile.id %}">Profile</a> </br>
+            <a href="{% url 'edit_profile_page' user.profile.id %}">Edit Your Profile</a> 
             {% else %}
                 <p>Have an account?</p> 
                 <a href="{% url 'login' %}">Log in</a>
