--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
 
+{% load static %}}
 {% block content %}
 
 <div class= "post-entry">
+    <h1>Author : {{post.author}}</h1>
+    {% if post.author.profile.profile_pic %}
+    <img src="{{ post.author.profile.profile_pic.url }}" width="100" , height="100">
+    {% else %}
+    <img src="{% static 'images/default_pic.png' %}" width="100" , height="100">
+    {% endif %}
     <h1>{{post.title}}</p1> </br>
-    <h2>Author : {{post.author}}</h2>
+    
     <h2>Band : {{post.band_name}}</p2> </br>
     <h2>Album : {{post.album_name}}</p3> </br>
     <p>{{post.body}}</p>
    <p>{{post.rating}} / 10</p>  
-
+{% if post.author.profile %}
    <a href="{% url 'profile_page' post.author.profile.id %}">Profile Page</a>
+    
+        {% endif %}
 </div> 
 {% if user.id == post.author.id %}
     <a href="{% url 'post_delete' post.pk %}">Delete This Post</a> </br>
