--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 
+{% load static %}
 
 {% block content %}
 
 {{page_user}} </br>
-{{page_user.bio}}
+{{page_user.bio}} </br>
+
+{% if page_user.profile_pic %}
+    <img src="{{ page_user.profile_pic.url }}" width="100" , height="100">
+    {% else %}
+    <img src="{% static 'images/default_pic.png' %}" width="100" , height="100">
+    {% endif %}
+    
+
 
 
 {% endblock content %}
