--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,12 @@
             <p>Logged in as {{user.username}}</p>
             <a href="{% url 'logout' %}">Log out</a> </div> </body> </br>
             <a href="{% url 'post_new' %}">Create A Post</a> </br>
-            <a href="{% url 'profile_page' user.profile.id %}">Profile</a> </br>
-            <a href="{% url 'edit_profile_page' user.profile.id %}">Edit Your Profile</a> 
+            {% if user.profile %}
+                <a href="{% url 'profile_page' user.profile.id %}">Profile</a> </br>
+                <a href="{% url 'edit_profile_page' user.profile.id %}">Edit Your Profile</a>
+                {% else %}
+                    <a href="{% url 'create_profile' %}">Create Your Profile</a>
+                    {% endif %}
             {% else %}
                 <p>Have an account?</p> 
                 <a href="{% url 'login' %}">Log in</a>
