--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,25 @@
 <html>
     <head>
         <title>Django Blog</title>
+        <!-- CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+crossorigin="anonymous">
+
+<!-- JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNSL0ul"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
+
     </head>
     <body>
-       <header>
+    <!--   <header>
         <h1><a href="{% url 'home' %}">Loud Music</a></h1>
         </header>
         {% if user.is_authenticated %}
@@ -23,16 +39,70 @@
                 <a href="{% url 'signup' %}">Sign Up</a>
                 {% endif %}
         </div>
-           
+           -->
             
-       <div>
-        {% block content %}
-
        
-       {% endblock content %}
-        </div>
         
-       
+ 
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="{% url 'home' %}">Loud Music</a>       
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                <li class="nav-item active">
+                 <span class="nav-item">{{user.username}}</span>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'post_new' %}">+ Post</a>
+                </li>
+                
+                {% if user.profile %}
+                <li class="nav-item">
+                    <a class="nav-link"href="{% url 'profile_page' user.profile.id %}">Profile</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'edit_profile_page' user.profile.id %}">Edit Your Profile</a>
+                  </li>
+                {%else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_profile' %}">Create Profile</a>
+                  </li>
+                  {% endif %}
+                  {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'signup' %}">Signup</a>
+                  </li>
+                  {% endif %}
+
+              </ul>
+            </div>
+          </nav>
+
+          <div>
+            {% block content %}
+    
+           
+           {% endblock content %}
+            </div>
+
+
+
+
+
+
+
+
        
 
     </body>
