--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,31 +1,43 @@
 {% extends "base.html" %}
 
-{% load static %}}
+{% load static %}
 {% block content %}
 
-<div class= "post-entry">
-    <h1>Author : {{post.author}}</h1>
-    {% if post.author.profile.profile_pic %}
-    <img src="{{ post.author.profile.profile_pic.url }}" width="100" , height="100">
-    {% else %}
-    <img src="{% static 'images/default_pic.png' %}" width="100" , height="100">
-    {% endif %}
-    <h1>{{post.title}}</p1> </br>
-    
-    <h2>Band : {{post.band_name}}</p2> </br>
-    <h2>Album : {{post.album_name}}</p3> </br>
-    <p>{{post.body}}</p>
-   <p>{{post.rating}} / 10</p>  
-{% if post.author.profile %}
-   <a href="{% url 'profile_page' post.author.profile.id %}">Profile Page</a>
-    
-        {% endif %}
-</div> 
-{% if user.id == post.author.id %}
-    <a href="{% url 'post_delete' post.pk %}">Delete This Post</a> </br>
-    <a href="{% url 'post_edit' post.pk %}">Update This Post</a>
-    {% endif %}
 
 
+<div class="container">
+    <div class="row">
+      
+        <div class="col-md-8 offset-md-2">
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="media mb-3">
+                {% if post.author.profile %}
+                <a href="{% url 'profile_page' post.author.profile.pk %}">
+                    {% if post.author.profile.profile_pic %}
+                        <img src="{{ post.author.profile.profile_pic.url }}" class="mr-3 rounded-circle" alt="Profile Picture" style="width: 50px; height: 50px;">
+                        {% endif %}
+                </a>
+                    {% else %}
+                    <img src="{% static 'images/default_pic.png' %}" class="mr-3 rounded-circle" alt="Profile Picture" style="width: 50px; height: 50px;">
+                        {% endif %}
+                <div class="media-body">
+                  <h5 class="mt-0">{{ post.author.username }}</h5>
+                </div>
+              </div>
+              <h4>{{ post.band_name }} - {{ post.album_name }}</h4>
+              <p>{{ post.body }}</p>
+              <p>Rating: {{ post.rating }}</p>
+              {% if user.id == post.author.id %}
+                <p><a href="{% url 'post_delete' post.pk %}">Delete This Post</a> | <a href="{% url 'post_edit' post.pk %}">Update This Post</a> </p>
+                    
+    {% endif %}
+            </div>
+          </div>
+        </div>
+      
+    </div>
+  </div>
+    
 
 {% endblock content %}
