--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -4,15 +4,58 @@
 
 {% block content %}
 
-{{page_user}} </br>
-{{page_user.bio}} </br>
 
-{% if page_user.profile_pic %}
-    <img src="{{ page_user.profile_pic.url }}" width="100" , height="100">
-    {% else %}
-    <img src="{% static 'images/default_pic.png' %}" width="100" , height="100">
-    {% endif %}
+<style>
+  
+  .card {display: inline-block;}
+</style>
+
+
+  
+    <div class="card"  style="width: 18rem;">
     
+      {%if page_user.profile_pic %}
+     <img class="card-img-top" src="{{ page_user.profile_pic.url }}" alt="Card image cap" >
+         {% else %}
+         <img class="card-img-top" src="{% static 'images/default_pic.png' %}" alt="Card image cap" >
+   
+   
+           {% endif %}
+     <div class="card-body">
+       <h5 class="card-title">{{page_user.user}}</h5>
+       <p class="card-text">{{page_user.bio}}</p>
+       </div>
+   </div>
+
+  
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+     <h5 class="card-title">See all posts:</h5>
+     {% for post in posts %}
+  
+     <a class="card-text" href="{% url 'post_detail' post.pk %}">{{post.title}}</a> </br>
+
+
+     {% endfor %}
+     </div>
+  </div>
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
