--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Edit Your Post</h1>
-<form method="post">{%csrf_token%}
-    {{form.as_p}}
-    <input type="submit" value="Update Post">
 
-</form>
+
+<div class="container">
+    <div class="d-flex justify-content-center" >
+      <form method="post" >
+        {{ form.media }}
+        {{ form|crispy}}
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
 
 
 {% endblock content %}
