--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Create a post</h1>
-<form action="" , method="post">{%csrf_token%}
-    {{ form.as_p }}
-    <input type="submit" , value="save">
 
 
-</form>
+
+
+<div class="container">
+    <div class="d-flex justify-content-center" >
+      <form method="post" >
+        {{ form.media }}
+        {{ form|crispy}}
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
+
+
+
 
 {% endblock content %}
