--- a/templates/registration/create_profile.html
+++ b/templates/registration/create_profile.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
 {% if user.is_authenticated %}
 
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Create Your Profile</button>
-</form>
+
+<div class="container">
+    <div class="d-flex justify-content-center" >
+      <form action = "" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form|crispy}}   
+        <button type="submit" class="btn btn-primary">Create Your Profile</button>
+      </form>
+    </div>
+  </div>
+
 
 {% endif %}
 {% endblock content %}
