--- a/templates/registration/edit_profile_page.html
+++ b/templates/registration/edit_profile_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 
 {% if user.is_authenticated %}
@@ -6,15 +7,17 @@
 {% if user.id == profile.user.id %}
 
 <h1>Edit Your Profile</h1>
-<form action = "" method = "POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Update Profile">
-</form>
+<div class="container">
+    <div class="d-flex justify-content-center" >
+      <form action = "" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form|crispy}}   
+        <button type="submit" class="btn btn-primary">Update</button>
+      </form>
+    </div>
+  </div>
     
-
-
-    {% else %}
+  {% else %}
         
         <p>How did you manage to end up here?</p>
 
