--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,23 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 
 <h1>Login Page</h1>
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Log In</button>
-</form>
+
+
+<div class="container">
+    <div class="d-flex justify-content-center" >
+      <form action = "" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form|crispy}}   
+        <button type="submit" class="btn btn-primary">Log In</button>
+      </form>
+    </div>
+  </div>
+
+
+
+
 
 
 {% endblock content %}
