--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,11 +1,25 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Sign Up</h1>
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Sign Up</button>
-</form>
+
+
+<div class="container">
+    <div class="d-flex justify-content-center" >
+      <form action = "" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form|crispy}}   
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </form>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
 
 {% endblock content %}
